--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "env-cmd -f .env gatsby develop",
+    "develop": "env-cmd -f .env.development gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -20,16 +20,19 @@
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-sharp": "^2.3.10",
+    "gatsby-plugin-transition-link": "^1.17.7",
     "gatsby-remark-images": "^3.1.39",
     "gatsby-remark-relative-images": "^0.2.3",
-    "gatsby-source-contentful": "^2.1.73",
+    "gatsby-source-contentful": "^2.1.75",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.9",
+    "gsap": "^3.0.5",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "slug": "^2.1.0"
   },
   "devDependencies": {
     "env-cmd": "^10.0.1",
